Moved data loading from URLs to simple Files.